updated header with image

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <table bgcolor='lightgray' width='100%'> <tr>
     <td width='20%' align='left'>
-        <a href="/"><img src="/images/logo.jpg" width="70" height="40"> 
+        <a href="/"><img src="/images/lux.png" width="70" height="40"> 
 </a></td> 
      <td width='60%' align='center'><h1>LockerFoot</h1></td>
      <td width='10%' align='center'>Login Control</td>
