--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LuxToy</title>
+    <title>LuxToys</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
